# btreedb

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
btreedb/: __init__.py  __main__.py  bench.py  btree.py
tests/: test_btree.py
