[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "btreedb"
version = "0.1.0"
description = "An on-disk B+ tree in pure Python. A thousand times more data costs one extra page read."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kai Pfister" }]
keywords = ["btree", "b-plus-tree", "database", "storage-engine", "from-scratch", "index"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/Wasserpuncher/btreedb"

[project.scripts]
btreedb = "btreedb.__main__:main"

[tool.setuptools.packages.find]
include = ["btreedb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
